--- a/notebooks/MBL.ipynb
+++ b/notebooks/MBL.ipynb
@@ -8,19 +8,21 @@
     "\n",
     "## Adiabatic Control of Parameters\n",
     "\n",
-    "### Notebook by [Marco Tavora](https://marcotavora.me/)\n",
-    "\n",
     "<br>\n",
     "<img align=\"left\" width=\"80\"  src=\"https://img.shields.io/badge/python-v3.6-blue.svg\">\n",
     "<br>\n",
-    "<br>"
+    "\n",
+    "### Notebook by [Marco Tavora](https://marcotavora.me/)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"mbl.jpg\" style=\"height:300px;\"/>"
+    "<img src=\"mbl.jpg\" style=\"height:300px;\"/>\n",
+    "\n",
+    "**Fig.1**: Occupation discontinuity as a function of disorder strength and energy density for spinless fermions in 1D with nearest-neighbor repulsion and diagonal disorder (Source: [Bera S., Schomerus H., Heidrich-Meisner F., and H. Bardarson J.](https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.115.046603)."
    ]
   },
   {
@@ -30,7 +32,9 @@
     "## Table of contents\n",
     "\n",
     "1. [Introduction](#Introduction)\n",
-    "2. [Importing packages](#Importing-packages)"
+    "2. [Can the system adiabatically follow the ramp?](#Can-the-system-adiabatically-follow-the-ramp)\n",
+    "2. [Importing packages](#Importing-packages)\n",
+    "3. [Acknowledgements](#Acknowledgements)"
    ]
   },
   {
@@ -42,51 +46,71 @@
     "\n",
     "Let us consider a closed quantum system:\n",
     "\n",
-    "\n",
     "<img src=\"closed_system.png\" style=\"height:150px;\"/>\n",
     "<br>\n",
-    "The (time-dependent) Hamiltonian, known to exhibit a MBL dynamical phase transition reads:\n",
+    "\n",
+    "The (time-dependent) Hamiltonian, known to exhibit a [MBL dynamical phase transition](https://journals.aps.org/prb/abstract/10.1103/PhysRevB.92.014208) reads:\n",
     "\n",
     "\\begin{eqnarray}\n",
-    "H(t) = \\sum\\limits_{i = 0}^{L - 2} {\\left[ {\\frac{{{J_{xy}}}}{2}(S_{i + 1}^ + S_i^ -  + {\\rm{h}}.{\\rm{c}}.) + {J_{zz}}(t)S_{i + 1}^zS_i^z} \\right]}  + \\sum\\limits_{i = 0}^{L - 1} {{h_i}S_i^z} ,\\,\\,\\,\\,\\,\\,\\,\\,\\,\\,{J_{zz}}(t) = (1/2 + vt).\n",
+    "H(t) = \\sum\\limits_{i = 0}^{L - 2} {\\left[ {\\frac{{{J_{xy}}}}{2}(S_{i + 1}^ + S_i^ -  + S_i^ + S_{i + 1}^ - ) + {J_{zz}}(t)S_{i + 1}^zS_i^z} \\right]}  + \\sum\\limits_{i = 0}^{L - 1} {{h_i}S_i^z} ,\\,\\,\\,\\,\\,\\,\\,\\,\\,\\,{J_{zz}}(t) = (1/2 + vt).\n",
     "\\end{eqnarray}\n",
     "\n",
-    "The random field $h_j$ in the $z$-direction is uniformly distributed within the interval $[-h_0,h_0]$ and $J_{zz}(t)$ is modulated adiabatically (we set ${J_{zz}}(0)=1$ for convenience). "
+    "The parameters here are:\n",
+    "- $h_j$: random field  in the $z$-direction, uniformly distributed within the interval $[-h_0,h_0]$\n",
+    "- $J_{zz}(t)$ is modulated adiabatically and with ramp speed $v$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Can the system adiabatically follow the ramp?\n",
+    "[[go back to the top]](#Table-of-contents)\n",
+    "\n",
     "It has been argued [quite recently](https://www.nature.com/articles/nphys3344) that the adiabatic theorem cannot be applied to disordered systems. \n",
     "\n",
-    "We will investigate here if the system can follow the ramp (varying $v$) adiabatically i.e. if there is some \"window of adiabaticity\". More concretely, we will evolve the system from $t_i=0$ to $t=1/2v$, such that:\n",
+    "We will address here the following question: can the system follow the ramp (varying $v$) adiabatically, a least in part? More concretely, we will evolve the system from $t_i=0$ to $t=(2v)^{-1}$.\n",
     "\n",
-    "$${J_{zz}}({t_i}) = 1/2 \\Rightarrow {J_{zz}}(t) = 1$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We will evolve the system from an eigenstate of $H(0)$ with the energy closest to the middle of the $H(0)$ spectrum, and use the following indicators to verify if the system can follow the ramp adiabatically:\n",
+    "To assure tipicality, the initial state we will chose  will be an eigenstate of the initial Hamiltonian with the energy closest to the middle spectrum. \n",
     "\n",
-    "\\begin{array}{l}\n",
-    "{s_d}(t) =  - \\frac{1}{L}\\,{\\rm{Tr}}\\,{\\rho _d}(t)\\ln {\\rho _d}(t),\\,\\,\\,\\,\\,\\,\\,\\,\\,{\\rho _d}(t) = \\sum\\nolimits_n {{{\\left| {\\left\\langle {n|\\psi (t)} \\right\\rangle } \\right|}^2}\\left| n \\right\\rangle \\left\\langle n \\right|} \\\\\n",
-    "{s_e}(t) =  - \\frac{1}{{|A|}}{\\rm{Tr}}{\\,_A}{\\rho _A}(t)\\ln {\\rho _A}(t),\\,\\,\\,\\,\\,\\,\\,\\,\\,{\\rho _A}(t) = {\\rm{T}}{{\\rm{r}}_{{A^c}}}\\,\\left| {\\psi (t)} \\right\\rangle \\left\\langle {\\psi (t)} \\right|.\n",
-    "\\end{array}\n",
     "\n",
-    "Here $t$ is the final time, $A$ is a subsystem containing the left half of the chain, $\\rho_A$ is its reduced density matrix and $|A|=1/2$. Note that ${s_d}(t)$ is a measure of delocalization of the final state among the eigenstates of the final Hamiltonian. E.g., if the final state of the system is a single eigenstate of $H(t)$, ${s_d}(t)=0$.\n",
-    "\n",
-    "Our goal is to calculate the (disorder-averaged) expressions for ${s_d}(t)$ and ${s_e}(t)$ in terms of the velocity parameter."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Importing packages\n",
+    "## Indicators\n",
     "[[go back to the top]](#Table-of-contents)\n",
+    "\n",
+    "The following indicators will be used to verify if the system can follow the ramp adiabatically:\n",
+    "- diagonal entropy density\n",
+    "- entanglement entropy density\n",
+    "\n",
+    "We will calculate the (disorder-averaged) expressions for bioth entropies in terms of the velocity parameter.\n",
+    "\n",
+    "### Diagonal entropy density\n",
+    "\n",
+    "The diagonal entropy density reads:\n",
+    "\n",
+    "$${s_d}(t) =  - \\frac{1}{L}\\,{\\rm{Tr}}\\,{\\rho _d}(t)\\ln {\\rho _d}(t),\\,\\,\\,\\,\\,\\,\\,\\,\\,{\\rho _d}(t) = \\sum\\nolimits_n {{{\\left| {\\left\\langle {n|\\psi (t)} \\right\\rangle } \\right|}^2}\\left| n \\right\\rangle \\langle n|} {\\rm{ }}$$\n",
+    "\n",
+    "${s_d}(t)$ measures of degree of delocalization of the final state among the eigenstates $H(t)$ (e.g. if the final state of the system is a single eigenstate of $H(t)$, ${s_d}(t)=0$)\n",
+    "\n",
+    "### Entanglement entropy density\n",
+    "\n",
+    "$${s_e}(t) =  - \\frac{1}{{|A|}}{\\rm{Tr}}{\\,_A}{\\rho _A}(t)\\ln {\\rho _A}(t),\\,\\,\\,\\,\\,\\,\\,\\,\\,{\\rho _A}(t) = {\\rm{T}}{{\\rm{r}}_{{A^c}}}\\,\\left| {\\psi (t)} \\right\\rangle \\langle \\psi (t)|.$$\n",
+    "\n",
+    "Here:\n",
+    "- $t$ is the final time\n",
+    "- $A$ is a subsystem containing the left half of the system\n",
+    "- $\\rho_A$ is its reduced density matrix\n",
+    "- $|A|=1/2$. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Code\n",
+    "[[go back to the top]](#Table-of-contents)\n",
+    "\n",
+    "### Importing packages\n",
+    "\n",
     "\n",
     "This notebook will follow very closely the documentation found [here](https://scipost.org/SciPostPhys.2.1.003/pdf). The first step is to import the necessary `Python` modules. Besides some of the usual `Python` packages, we will need the following packages from ` QuSpin`:\n",
     "- The basis module `quspin.basis` to build the Hilbert space\n",
@@ -105,13 +129,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys,os\n",
-    "from numpy.random import ranf,seed \n",
-    "from joblib import delayed,Parallel # used for parallelisation\n",
+    "import numpy as np\n",
     "import numpy as np \n",
     "from time import time\n",
     "import auxiliar_functions as aux\n",
@@ -129,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,12 +180,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_real=20 \n",
-    "n_jobs=2 \n",
+    "n_real, n_jobs =20, 2 \n",
     "L, Jxy, Jzz_0, h_MBL, h_ETH =10, 1.0, 1.0, 3.9, 0.1  "
    ]
   },
@@ -175,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +206,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +310,7 @@
        "v  0.379269  0.483293  0.615848  0.78476  1.0  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +339,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v = 1.0 \n",
+    "\n",
+    "def ramp(t):\n",
+    "    return (0.5 + v*t)\n",
+    "\n",
+    "ramp_args=[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -336,13 +372,6 @@
     }
    ],
    "source": [
-    "v = 1.0 \n",
-    "\n",
-    "def ramp(t):\n",
-    "    return (0.5 + v*t)\n",
-    "\n",
-    "ramp_args=[]\n",
-    "\n",
     "fig = plt.figure(figsize=(8, 4));\n",
     "ramp_list = [ramp(t) \n",
     "             for t in range(2)]\n",
@@ -364,18 +393,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "basis = spin_basis_1d(L,Nup=L//2,pauli=False)\n",
-    "J_zz, J_xy = [[Jzz_0,i,i+1] for i in range(L-1)], [[Jxy/2.0,i,i+1] for i in range(L-1)]\n",
+    "basis = spin_basis_1d(L,Nup=L//2, pauli=False)\n",
+    "\n",
+    "J_zz, J_xy = [[Jzz_0,i,i+1] \n",
+    "              for i in range(L-1)], [[Jxy/2.0,i,i+1] \n",
+    "                                     for i in range(L-1)]\n",
+    "\n",
     "static, dynamic = [[\"+-\",J_xy],[\"-+\",J_xy]], [[\"zz\",J_zz,ramp,ramp_args]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -454,36 +487,36 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>random field</th>\n",
-       "      <td>0.917088</td>\n",
-       "      <td>0.644799</td>\n",
-       "      <td>-0.74907</td>\n",
-       "      <td>0.844823</td>\n",
-       "      <td>0.299153</td>\n",
-       "      <td>-0.683998</td>\n",
-       "      <td>-0.400171</td>\n",
-       "      <td>0.764531</td>\n",
-       "      <td>-0.489747</td>\n",
-       "      <td>-0.151258</td>\n",
+       "      <td>0.177147</td>\n",
+       "      <td>0.837917</td>\n",
+       "      <td>0.527189</td>\n",
+       "      <td>-0.861374</td>\n",
+       "      <td>-0.279513</td>\n",
+       "      <td>0.720321</td>\n",
+       "      <td>-0.947146</td>\n",
+       "      <td>-0.572016</td>\n",
+       "      <td>0.686134</td>\n",
+       "      <td>-0.619889</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     0         1        2         3         4         5  \\\n",
-       "random field  0.917088  0.644799 -0.74907  0.844823  0.299153 -0.683998   \n",
+       "                     0         1         2         3         4         5  \\\n",
+       "random field  0.177147  0.837917  0.527189 -0.861374 -0.279513  0.720321   \n",
        "\n",
        "                     6         7         8         9  \n",
-       "random field -0.400171  0.764531 -0.489747 -0.151258  "
+       "random field -0.947146 -0.572016  0.686134 -0.619889  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "unscaled_fields = -1+2*ranf((basis.L,))\n",
+    "unscaled_fields = -1+2*np.random.ranf((basis.L,))\n",
     "print('random field:')\n",
     "pd.DataFrame(np.array(list(unscaled_fields)).reshape(unscaled_fields.shape[0],\n",
     "                                                     1), columns = ['random field']).T"
@@ -498,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,9 +539,9 @@
     "    \n",
     "    ti = time() \n",
     "    global v \n",
-    "    seed() \n",
+    "    np.random.seed() \n",
     "    \n",
-    "    unscaled_fields=-1+2*ranf((basis.L,))\n",
+    "    unscaled_fields=-1+2*np.random.ranf((basis.L,))\n",
     "    \n",
     "    h_z=[[unscaled_fields[i],i] for \n",
     "         i in range(basis.L)]\n",
@@ -592,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,6 +994,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Acknowledgements\n",
+    "[[go back to the top]](#Table-of-contents)\n",
+    "\n",
+    "This notebook is **heavily** based on the [excellent tutorial](https://scipost.org/10.21468/SciPostPhys.2.1.003) about the [QuSPin package](https://github.com/weinbe58/QuSpin) created by [Phillip Weinberg](https://github.com/weinbe58) and [Marin Bukov](https://mgbukov.github.io/)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Appendix\n",
     "[[go back to the top]](#Table-of-contents)"
    ]
@@ -1153,10 +1196,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
